Import of TIMB/Devel-SizeMe-0.04 from CPAN.
gitpan-cpan-distribution: Devel-SizeMe
gitpan-cpan-version:      0.04
gitpan-cpan-path:         TIMB/Devel-SizeMe-0.04.tar.gz
gitpan-cpan-author:       TIMB
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -13,6 +13,7 @@ Current implementation is all very alpha and rather hackish.
 
 TODO:
 
+    Remove log scale checkboc from the treemp as it doesn't work yet
     Devel::SizeMe::Core - loads XS and sets options
     Devel::SizeMe - loads Devel::SizeMe::Core
         -d:SizeMe=opts?
