--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,15 @@
 Revision history for Perl extension Devel::SizeMe.
 
+0.04 2012-10-05 Tim Bunce
+
+ * Removed Mojolicious::Lite as a prerequisite as it was stoping people
+    using SizeMe with perl 5.8.
+
+0.03 2012-10-04 Tim Bunce
+
+ * Fixup logic and tests to be portable across more perl versions.
+ * Applied some polish to the docs.
+
 0.02 2012-10-02 Tim Bunce
 
  * Renamed to Devel::SizeMe.
