--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,24 @@
 Revision history for Perl extension Devel::SizeMe.
 
+0.11 - 2013-05-31 - Tim Bunce
+
+ * Major update.
+ * Uses ref counts to limit extent of crawling.
+ * Optionally collapses cop_file's, hek's and other 'noise' nodes.
+ * Outputs Graph::Easy (for small graphs) and GEXF (for large).
+ * Many updates to treemap interface.
+ * Don't follow method cache entries, thanks to Rafael Garcia-Suarez.
+ * This is rather rough release to get a usable version out before YAPC::NA.
+
+0.07 2013-01-10 Tim Bunce
+
+ *  Updated README
+ *  Added ptest target for parallel testing
+ *  Modernize Makefile.PL and add META info, including repo and bug tracker.
+ *  Fixed to work on Perl 5.8 thanks to Rafael Garcia-Suarez
+ *  Enabled travis-ci.org CI thanks to Jonathan "Duke" Leto.
+ *  Pod fix thanks to Olivier Mengué
+
 0.06 2012-10-17 Tim Bunce
 
  * fix madprop_size, hopefully (untested)
