--- a/TODO
+++ b/TODO
@@ -1,6 +1,12 @@
+Add flags arg to sv_size:
+    flag to use link label as sv label
+Move addr out of attr.
+Add db transform to hide RV's (though check for addrs pointing to it first)
+Split db into separate node and link tables
 Sort out naming:
     id vs name vs label
     descriptive: Foo::, {keystr}, [42], *GLOB, etc (longer)
+    pass-thru enogh info to perform 'decoration' on output
 Better handling of pads
     especially padtmp
     eg add scope, or ideally line range when emiting pad names
@@ -10,7 +16,7 @@ Review general SV and attribute handling
 Add global attributes, especially perl version
 PL_strtab sizing
     See hek_size()
-    Long unique keys show up as bloat in PL_strtab even though they've been seen before PL_strtab is sized
+    Long unique keys show up as bloat in PL_strtab even though they've been seen before PL_strtab is sized?
     make && SIZEME_HIDE=7 SIZEME='|bin/sizeme_store.pl --db sizeme.db --gexf sizeme.gexf' perl -Mblib -MDevel::SizeMe=:all -e '$k="k" x 10_000; push @a, { $k.scalar(@a) => 1 } while @a<1_000; perl_size()'
 Fix spelling of leafs!
 
